--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+  ],
+  "typeRoots": ["./node_modules/@types", "./src/types"]
 }
