--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.5",
     "expo": "~54.0.33",
     "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-image": "^3.0.11",
