--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-image": "^3.0.11",
-    "expo-linear-gradient": "^15.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.23",
@@ -39,7 +39,6 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.3",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
