--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # API Configuration
-EXPO_PUBLIC_API_URL=https://shopping-list-backend-production-bf48.up.railway.app/api
-#EXPO_PUBLIC_API_URL=http://192.168.1.149:5000/api
+#EXPO_PUBLIC_API_URL=https://shopping-list-backend-production-bf48.up.railway.app/api
+EXPO_PUBLIC_API_URL=http://192.168.1.149:5000/api
 PORT=5000
 
 # Environment
